--- a/maglaro/maglaroHome.html
+++ b/maglaro/maglaroHome.html
@@ -18,7 +18,7 @@
 </head>
 
     <body class="sub-menu" id="maglaro-home">
-        <a class="home-button" href="../../index.html"><img src="../asset/img/HOME ICON.png" alt=""></a>
+        <a class="home-button" href="../index.html"><img src="../asset/img/HOME ICON.png" alt=""></a>
 
 
         <div id="pagtutugma" class="maglaro">
