--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body id="main-menu">
             <div class="main-menu-logo">
                 <p>SALIN</p> 
-                <img src="asset/img/bitwin-removebg-preview.png" alt="">
+                <img id="star" src="asset/img/bitwin-removebg-preview.png" alt="">
                 <p>SINTA</p>       
             </div>
 
