--- a/matuto/modulation.html
+++ b/matuto/modulation.html
@@ -35,7 +35,7 @@
 .tagalog-example p:nth-child(1){
     font-family: "Roboto Condensed", serif;
     font-weight: 700;
-    font-size: 1.3vw;
+    font-size: 2vw;
     color: #cc990d;
     margin-bottom: 2vh;
 }
@@ -43,7 +43,7 @@
 .tagalog-example p:nth-child(2),
 .tagalog-example p:nth-child(3){
     font-family: "Roboto Condensed", serif;
-    font-size: 1.2vw;
+    font-size: 1.5vw;
 }
 
 .english-examples{
@@ -55,13 +55,12 @@
 
 .english-example{
     margin: 1vw;
-    margin-left: 35vw;
 }
 
 .english-example p:nth-child(1){
     font-family: "Roboto Condensed", serif;
     font-weight: 700;
-    font-size: 1.3vw;
+    font-size: 2vw;
     color: #5b1c14;
     margin-bottom: 2vh;
 }
@@ -69,7 +68,7 @@
 .english-example p:nth-child(2),
 .english-example p:nth-child(3){
     font-family: "Roboto Condensed", serif;
-    font-size: 1.2vw;
+    font-size: 1.5vw;
 }
 </style>
 <body class="sub-menu">
@@ -90,7 +89,7 @@
     
         <div class="definition">
             <p>DEFINITION</p>
-            <li>Tumutukoy sa pagbabago ng pananaw o perspektiba upang maipahayag ang parehong ideya sa mas angkop na paraan</li>
+            <li>Tumutukoy ang MODLUATION sa pagbabago ng pananaw o perspektiba upang maipahayag ang parehong ideya sa mas angkop na paraan</li>
         </div>
     
         <div class="modals">
