--- a/matuto/explicating.html
+++ b/matuto/explicating.html
@@ -32,7 +32,7 @@
 .tagalog-example p:nth-child(1){
     font-family: "Roboto Condensed", serif;
     font-weight: 700;
-    font-size: 1.3vw;
+    font-size: 2vw;
     color: #cc990d;
     margin-bottom: 2vh;
 }
@@ -40,7 +40,7 @@
 .tagalog-example p:nth-child(2),
 .tagalog-example p:nth-child(3){
     font-family: "Roboto Condensed", serif;
-    font-size: 1.2vw;
+    font-size: 1.5vw;
 }
 
 .english-examples{
@@ -52,13 +52,12 @@
 
 .english-example{
     margin: 1vw;
-    margin-left: 35vw;
 }
 
 .english-example p:nth-child(1){
     font-family: "Roboto Condensed", serif;
     font-weight: 700;
-    font-size: 1.3vw;
+    font-size: 2vw;
     color: #5b1c14;
     margin-bottom: 2vh;
 }
@@ -66,10 +65,10 @@
 .english-example p:nth-child(2),
 .english-example p:nth-child(3){
     font-family: "Roboto Condensed", serif;
-    font-size: 1.2vw;
+    font-size: 1.5vw;
 }
 
- 
+   
 </style>
 
 <body class="sub-menu">
@@ -90,7 +89,7 @@
     
         <div class="definition">
             <p>DEFINITION</p>
-            <li> Ang pagpapaliwanag ng impormasyon na implicit o hindi hayag sa orihinal na teksto upang ito ay maging malinaw sa target na wika</li>
+            <li> Ang EXPLICATING pagpapaliwanag ng impormasyon na implicit o hindi hayag sa orihinal na teksto upang ito ay maging malinaw sa target na wika</li>
         
             <p>PURPOSE</p>
             <li>Ginagamit ang explicating upang gawing mas malinaw ang mga nakatagong impormasyon sa orihinal na teksto, ipaliwanag ang mga sangguniang kultural, idiomatic expressions, o teknikal na detalye, at siguruhing naipapahayag nang maayos ang diwa ng orihinal na teksto sa target na wika.</li>
