--- a/matuto/equivalence.html
+++ b/matuto/equivalence.html
@@ -35,7 +35,7 @@
 .tagalog-example p:nth-child(1){
     font-family: "Roboto Condensed", serif;
     font-weight: 700;
-    font-size: 1.3vw;
+    font-size: 2vw;
     color: #cc990d;
     margin-bottom: 2vh;
 }
@@ -43,7 +43,7 @@
 .tagalog-example p:nth-child(2),
 .tagalog-example p:nth-child(3){
     font-family: "Roboto Condensed", serif;
-    font-size: 1.2vw;
+    font-size: 1.5vw;
 }
 
 .english-examples{
@@ -55,13 +55,12 @@
 
 .english-example{
     margin: 1vw;
-    margin-left: 35vw;
 }
 
 .english-example p:nth-child(1){
     font-family: "Roboto Condensed", serif;
     font-weight: 700;
-    font-size: 1.3vw;
+    font-size: 2vw;
     color: #5b1c14;
     margin-bottom: 2vh;
 }
@@ -69,7 +68,7 @@
 .english-example p:nth-child(2),
 .english-example p:nth-child(3){
     font-family: "Roboto Condensed", serif;
-    font-size: 1.2vw;
+    font-size: 1.5vw;
 }
 
 
@@ -94,7 +93,7 @@
     
         <div class="definition">
             <p>DEFINITION</p>
-            <li>Ang equivalence sa pagsasalin ay ang paggamit ng ekspresyon na may parehong kahulugan at epekto sa target na wika, hindi nakatuon sa literal na pagsasalin.</li>
+            <li>Ang EQUIVALENCE sa pagsasalin ay ang paggamit ng ekspresyon na may parehong kahulugan at epekto sa target na wika, hindi nakatuon sa literal na pagsasalin.</li>
         </div>
     
         <div class="modals">
