--- a/matuto/borrowing.html
+++ b/matuto/borrowing.html
@@ -36,14 +36,14 @@
 .tagalog-example p:nth-child(1){
     font-family: "Roboto Condensed", serif;
     font-weight: 700;
-    font-size: 1.3vw;
+    font-size: 2vw;
     color: #cc990d;
     margin-bottom: 2vh;
 }
 
 .tagalog-example p:nth-child(2){
     font-family: "Roboto Condensed", serif;
-    font-size: 1.2vw;
+    font-size: 1.5vw;
 }
 
 .english-examples{
@@ -54,24 +54,23 @@
 }
 
 .english-example{
-    margin: 1vw;
-    margin-left: 35vw;
+    margin: 1.5vw;
 }
 
 .english-example p:nth-child(1){
     font-family: "Roboto Condensed", serif;
     font-weight: 700;
-    font-size: 1.3vw;
+    font-size: 2vw;
     color: #5b1c14;
     margin-bottom: 2vh;
 }
 
 .english-example p:nth-child(2){
     font-family: "Roboto Condensed", serif;
-    font-size: 1.2vw;
+    font-size: 1.5vw;
 }
 
- 
+    
 </style>
 <body class="sub-menu">
 
@@ -91,10 +90,10 @@
 
         <div class="definition">
             <p>DEFINITION</p>
-            <li>Borrowing involves using a word or expression directly from the source language in the target language without translation</li>
+            <li>Ang BORROWING ay tumutukoy sa paggamit ng isang salita o parirala mula sa orihinal na wika papunta sa target na wika nang hindi isinasalin.</li>
 
             <p>PURPOSE</p>
-            <li>This technique is often used to preserve the cultural or technical specificity of the source text, such as proper nouns or unique terms that have no equivalent in the target language.</li>
+            <li>Ang teknik na ito ay karaniwang ginagamit upang mapanatili ang kultura o teknikal na espesipikong katangian ng orihinal na teksto, tulad ng mga pangalang pantangi o mga natatanging termino na walang katumbas sa target na wika.</li>
         </div>
 
         <div class="modals">
