--- a/matuto/adaptation.html
+++ b/matuto/adaptation.html
@@ -19,7 +19,7 @@
 
 <style>
     .tagalog-examples{
-    border: 1px solid #5b1c14;
+    border: 0.1vw solid #5b1c14;
     border-radius: 1vw;
     background-color: #fff8d6;
     padding: 2vw;
@@ -40,12 +40,12 @@
 .tagalog-example p:nth-child(2),
 .tagalog-example p:nth-child(3){
     font-family: "Roboto Condensed", serif;
-    font-size: 1.2vw;
+    font-size: 1.5vw;
 }
 
 
 .english-examples{
-    border: 3px solid #5b1c14;
+    border: 0.1vw solid #5b1c14;
     border-radius: 1vw;
     background-color: #fff8d6;
     padding: 2vw;
@@ -53,13 +53,12 @@
 
 .english-example{
     margin: 1vw;
-    margin-left: 50vw;
 }
 
 .english-example p:nth-child(1){
     font-family: "Roboto Condensed", serif;
     font-weight: 700;
-    font-size: 1.3vw;
+    font-size: 1.6vw;
     color: #5b1c14;
     margin-bottom: 2vh;
 }
@@ -67,9 +66,8 @@
 .english-example p:nth-child(2),
 .english-example p:nth-child(3){
     font-family: "Roboto Condensed", serif;
-    font-size: 1.2vw;
+    font-size: 1.5vw;
 }
-
  
 </style>
 
@@ -91,7 +89,7 @@
 
         <div class="definition">
             <p>DEFINITION</p>
-            <li>Adaptation sa pagsasalin ay tumutukoy sa pagbabago ng ekspresyon upang ito ay mas angkop sa kultura at konteksto ng target na wika habang pinapanatili ang kahulugan.</li>
+            <li>ADAPTATION sa pagsasalin ay tumutukoy sa pagbabago ng ekspresyon upang ito ay mas angkop sa kultura at konteksto ng target na wika habang pinapanatili ang kahulugan.</li>
         </div>
 
         <div class="modals">
