--- a/maglaro/maglaroHome.html
+++ b/maglaro/maglaroHome.html
@@ -22,6 +22,7 @@
 
 
         <div id="pagtutugma" class="maglaro">
+            <img src="../asset/img/sitwasyonal.png" alt="">
             <p class="maglaro-title">Pagtutugma</p>
             <p class="maglaro-description">Tugmain ang mga parirala sa tamang isinalin na pangungusap.</p>
 
@@ -34,6 +35,7 @@
 
 
         <div id="sitwasyonal" class="maglaro">
+            <img src="../asset/img/sitwasyonal.png" alt="">
             <p class="maglaro-title">Sitwasyonal</p>
             <p class="maglaro-description">Gamitin ang tamang teknik ng pagsasalin sa mga tunay na sitwasyon at ipaliwanag ito</p>
 
@@ -46,6 +48,7 @@
 
 
         <div id="limitadong-oras" class="maglaro">
+            <img src="../asset/img/limitadong oras.png" alt="">
             <p class="maglaro-title">Limitadong </p>
             <p class="maglaro-title">oras</p>
             <p class="maglaro-description">.Magsalin ng mga pangungusap sa loob ng itinakdang oras.</p>
