--- a/maglaro/maglaroHome.html
+++ b/maglaro/maglaroHome.html
@@ -49,9 +49,8 @@
 
         <div id="limitadong-oras" class="maglaro">
             <img src="../asset/img/limitadong oras.png" alt="">
-            <p class="maglaro-title">Limitadong </p>
-            <p class="maglaro-title">oras</p>
-            <p class="maglaro-description">.Magsalin ng mga pangungusap sa loob ng itinakdang oras.</p>
+            <p class="maglaro-title">Limitadong Oras</p>
+            <p class="maglaro-description">Magsalin ng mga pangungusap sa loob ng itinakdang oras.</p>
 
             <div class="menu-container" id="limitadong-oras-container">
                 <a href="./views/tagalog-english/limitadong-oras.html" class="limitadong-oras-menu">TAGALOG - ENGLISH </a>
