--- a/maglaro/maglaroHome.html
+++ b/maglaro/maglaroHome.html
@@ -22,7 +22,7 @@
 
 
         <div id="pagtutugma" class="maglaro">
-            <img src="../asset/img/sitwasyonal.png" alt="">
+            <img src="../asset/img/pagsasalin.png" alt="">
             <p class="maglaro-title">Pagtutugma</p>
             <p class="maglaro-description">Tugmain ang mga parirala sa tamang isinalin na pangungusap.</p>
 
