--- a/matuto/adaptation.html
+++ b/matuto/adaptation.html
@@ -104,8 +104,8 @@
                 <p>(Pagbati na iniakma sa konteksto ng Ingles.)</p>
             </div>
             <div class="tagalog-example">
-                <p>"Kamayan tayo."</p>
-                <p>Adapted Translation: "Let’s eat with our hands."</p>
+                <p>"Magkamayan tayo."</p>
+                <p>Adapted Translation: "Let’s shake hands."</p>
                 <p>(Pagpapaliwanag ng kaugalian sa pagkain.)</p>
             </div>
             <div class="tagalog-example">
