--- a/matuto/equivalence.html
+++ b/matuto/equivalence.html
@@ -113,9 +113,9 @@
                 <p>(Literal: "May butas ang aking bulsa.")</p>
             </div>
             <div class="tagalog-example">
-                <p>"May gatas pa sa labi."</p>
-                <p>Equivalent: "He’s still wet behind the ears."</p>
-                <p>(Literal: "May gatas pa sa kanyang labi.")</p>
+                <p>"Kapag may tiyaga, may nilaga"</p>
+                <p>Equivalent: "Good things come to those who wait"</p>
+                <p>(Literal: "There is stew for those who wait")</p>
             </div>
             <div class="tagalog-example">
                 <p>"Nagtutulak ng kariton."</p>
@@ -177,9 +177,9 @@
                 <p>(Literal: "Ang bola ay nasa iyong korte.")</p>
             </div>
             <div class="english-example">
-                <p>"Don’t judge a book by its cover."</p>
-                <p>Equivalent: "Huwag husgahan ang tao sa panlabas na anyo."</p>
-                <p>(Literal: "Huwag husgahan ang libro sa pabalat nito.")v</p>
+                <p>"Time is money"</p>
+                <p>Equivalent: "Ang oras ay ginto."</p>
+                <p>(Literal: "Ang oras ay pera")v</p>
             </div>
             <div class="english-example">
                 <p>"Under the weather."</p>
