--- a/matuto/adaptation.html
+++ b/matuto/adaptation.html
@@ -18,8 +18,9 @@
 </head>
 
 <style>
-    .tagalog-examples{
-    border: 0.1vw solid #5b1c14;
+    @media (min-width: 701px){
+        .tagalog-examples{
+    border: 1px solid #5b1c14;
     border-radius: 1vw;
     background-color: #fff8d6;
     padding: 2vw;
@@ -32,7 +33,7 @@
 .tagalog-example p:nth-child(1){
     font-family: "Roboto Condensed", serif;
     font-weight: 700;
-    font-size: 1.6vw;
+    font-size: 2vw;
     color: #cc990d;
     margin-bottom: 2vh;
 }
@@ -43,9 +44,8 @@
     font-size: 1.5vw;
 }
 
-
 .english-examples{
-    border: 0.1vw solid #5b1c14;
+    border: 1px solid #5b1c14;
     border-radius: 1vw;
     background-color: #fff8d6;
     padding: 2vw;
@@ -58,7 +58,7 @@
 .english-example p:nth-child(1){
     font-family: "Roboto Condensed", serif;
     font-weight: 700;
-    font-size: 1.6vw;
+    font-size: 2vw;
     color: #5b1c14;
     margin-bottom: 2vh;
 }
@@ -67,8 +67,62 @@
 .english-example p:nth-child(3){
     font-family: "Roboto Condensed", serif;
     font-size: 1.5vw;
+    }
 }
- 
+
+    @media (max-width: 700px){
+    .tagalog-examples{
+    border: 0.1vw solid #5b1c14;
+    border-radius: 1vw;
+    background-color: #fff8d6;
+    padding: 2vw;
+}
+
+    .tagalog-example{
+        margin: 4vw;
+    }
+
+    .tagalog-example p:nth-child(1){
+        font-family: "Roboto Condensed", serif;
+        font-weight: 700;
+        font-size: 6vw;
+        color: #cc990d;
+        margin-bottom: 2vh;
+    }
+
+    .tagalog-example p:nth-child(2),
+    .tagalog-example p:nth-child(3){
+        font-family: "Roboto Condensed", serif;
+        font-size: 4vw;
+    }
+
+
+    .english-examples{
+        border: 0.1vw solid #5b1c14;
+        border-radius: 1vw;
+        background-color: #fff8d6;
+        padding: 2vw;
+    }
+
+    .english-example{
+        margin: 4vw;
+    }
+
+    .english-example p:nth-child(1){
+        font-family: "Roboto Condensed", serif;
+        font-weight: 700;
+        font-size: 5vw;
+        color: #5b1c14;
+        margin-bottom: 2vh;
+    }
+
+    .english-example p:nth-child(2),
+    .english-example p:nth-child(3){
+        font-family: "Roboto Condensed", serif;
+        font-size: 4vw;
+    }
+
+}
 </style>
 
 <body class="sub-menu">
@@ -90,6 +144,9 @@
         <div class="definition">
             <p>DEFINITION</p>
             <li>ADAPTATION sa pagsasalin ay tumutukoy sa pagbabago ng ekspresyon upang ito ay mas angkop sa kultura at konteksto ng target na wika habang pinapanatili ang kahulugan.</li>
+            <p>PURPOSE</p>
+            <li>Gawing mas natural at madaling maunawaan ang pagsasalin sa target na wika at
+                maiparating ang mensahe sa paraang mas madaling tanggapin ng target na madla.</li>
         </div>
 
         <div class="modals">
@@ -99,14 +156,14 @@
 
         <div class="tagalog-examples">
             <div class="tagalog-example">
-                <p>"Maligayang Pasko!"</p>
-                <p>Adapted Translation: "Merry Christmas!"</p>
-                <p>(Pagbati na iniakma sa konteksto ng Ingles.)</p>
+                <p>"Nangangamoy aso"</p>
+                <p>Adapted Translation: "Something is suspicious"</p>
+                <p>(Isinasalin ang literal na tagalog na ekspresyon tungo sa mas karaniwan at madaling maunawaang ingles na idioma.)</p>
             </div>
             <div class="tagalog-example">
-                <p>"Magkamayan tayo."</p>
-                <p>Adapted Translation: "Let’s shake hands."</p>
-                <p>(Pagpapaliwanag ng kaugalian sa pagkain.)</p>
+                <p>"Kamayan tayo."</p>
+                <p>Adapted Translation: "Let’s eat with our hands."</p>
+                <p>(Pagpapaliwanag ng karaniwang kaugalian sa pagkain.)</p>
             </div>
             <div class="tagalog-example">
                 <p>"Laging huli si Juan."</p>
@@ -119,9 +176,9 @@
                 <p>(Iniangkop para sa kultural na kahulugan.)</p>
             </div>
             <div class="tagalog-example">
-                <p>"Pasalubong"</p>
-                <p>Adapted Translation: "Souvenir or gift from travel."</p>
-                <p>(Ipinaliwanag ang konteksto ng kultura.)</p>
+                <p>"Malapit na ang pasko"</p>
+                <p>Adapted Translation: "The holidays are coming."</p>
+                <p>(Isinasalin ang tiyak na pagtukoy sa pasko tungo sa mas malawak na termino na tumutugma sa karanasan ng mga nagsasalitang ingles.)</p>
             </div>
             <div class="tagalog-example">
                 <p>"Nakikiraan po."</p>
@@ -134,9 +191,9 @@
                 <p>(Iniangkop para sa mas direktang pahayag sa Ingles.)</p>
             </div>
             <div class="tagalog-example">
-                <p>"Masarap ang sinigang."</p>
-                <p>Adapted Translation: "Sinigang is delicious."</p>
-                <p>(Iniakma upang ipakilala ang pagkain sa dayuhang mambabasa.)</p>
+                <p>"Ang bata ay nagmano sa kanyang lola."</p>
+                <p>Adapted Translation: "The child showed respect to his grandmother by letting her bless him."</p>
+                <p>(Iniba ang salita upang ipaintindi ang pagmamano sa ingles.)</p>
             </div>
             <div class="tagalog-example">
                 <p>"Ang kalikasan ay biyaya."</p>
