--- a/matuto/equivalence.html
+++ b/matuto/equivalence.html
@@ -21,7 +21,8 @@
       </head>
 
       <style>
-.tagalog-examples{
+    @media (min-width: 701px){
+        .tagalog-examples{
     border: 1px solid #5b1c14;
     border-radius: 1vw;
     background-color: #fff8d6;
@@ -69,8 +70,62 @@
 .english-example p:nth-child(3){
     font-family: "Roboto Condensed", serif;
     font-size: 1.5vw;
+    }
 }
 
+    @media (max-width: 700px){
+    .tagalog-examples{
+    border: 0.1vw solid #5b1c14;
+    border-radius: 1vw;
+    background-color: #fff8d6;
+    padding: 2vw;
+}
+
+    .tagalog-example{
+        margin: 4vw;
+    }
+
+    .tagalog-example p:nth-child(1){
+        font-family: "Roboto Condensed", serif;
+        font-weight: 700;
+        font-size: 6vw;
+        color: #cc990d;
+        margin-bottom: 2vh;
+    }
+
+    .tagalog-example p:nth-child(2),
+    .tagalog-example p:nth-child(3){
+        font-family: "Roboto Condensed", serif;
+        font-size: 4vw;
+    }
+
+
+    .english-examples{
+        border: 0.1vw solid #5b1c14;
+        border-radius: 1vw;
+        background-color: #fff8d6;
+        padding: 2vw;
+    }
+
+    .english-example{
+        margin: 4vw;
+    }
+
+    .english-example p:nth-child(1){
+        font-family: "Roboto Condensed", serif;
+        font-weight: 700;
+        font-size: 5vw;
+        color: #5b1c14;
+        margin-bottom: 2vh;
+    }
+
+    .english-example p:nth-child(2),
+    .english-example p:nth-child(3){
+        font-family: "Roboto Condensed", serif;
+        font-size: 4vw;
+    }
+
+}
 
     
     </style>
@@ -94,6 +149,8 @@
         <div class="definition">
             <p>DEFINITION</p>
             <li>Ang EQUIVALENCE sa pagsasalin ay ang paggamit ng ekspresyon na may parehong kahulugan at epekto sa target na wika, hindi nakatuon sa literal na pagsasalin.</li>
+            <p>PURPOSE</p>
+            <li>Maipakita ang pagkakatulad o pagkakaiba ng mga kultura sa pamamagitan ng paghahambing ng mga katumbas na ekspresyon.</li>
         </div>
     
         <div class="modals">
@@ -179,7 +236,7 @@
             <div class="english-example">
                 <p>"Time is money"</p>
                 <p>Equivalent: "Ang oras ay ginto."</p>
-                <p>(Literal: "Ang oras ay pera")v</p>
+                <p>(Literal: "Ang oras ay pera")</p>
             </div>
             <div class="english-example">
                 <p>"Under the weather."</p>
