--- a/matuto/explicating.html
+++ b/matuto/explicating.html
@@ -18,7 +18,8 @@
 </head>
 
 <style>
- .tagalog-examples{
+    @media (min-width: 701px){
+        .tagalog-examples{
     border: 1px solid #5b1c14;
     border-radius: 1vw;
     background-color: #fff8d6;
@@ -66,9 +67,64 @@
 .english-example p:nth-child(3){
     font-family: "Roboto Condensed", serif;
     font-size: 1.5vw;
+    }
 }
 
-   
+    @media (max-width: 700px){
+    .tagalog-examples{
+    border: 0.1vw solid #5b1c14;
+    border-radius: 1vw;
+    background-color: #fff8d6;
+    padding: 2vw;
+}
+
+    .tagalog-example{
+        margin: 4vw;
+    }
+
+    .tagalog-example p:nth-child(1){
+        font-family: "Roboto Condensed", serif;
+        font-weight: 700;
+        font-size: 6vw;
+        color: #cc990d;
+        margin-bottom: 2vh;
+    }
+
+    .tagalog-example p:nth-child(2),
+    .tagalog-example p:nth-child(3){
+        font-family: "Roboto Condensed", serif;
+        font-size: 4vw;
+    }
+
+
+    .english-examples{
+        border: 0.1vw solid #5b1c14;
+        border-radius: 1vw;
+        background-color: #fff8d6;
+        padding: 2vw;
+    }
+
+    .english-example{
+        margin: 4vw;
+    }
+
+    .english-example p:nth-child(1){
+        font-family: "Roboto Condensed", serif;
+        font-weight: 700;
+        font-size: 5vw;
+        color: #5b1c14;
+        margin-bottom: 2vh;
+    }
+
+    .english-example p:nth-child(2),
+    .english-example p:nth-child(3){
+        font-family: "Roboto Condensed", serif;
+        font-size: 4vw;
+    }
+
+}
+
+ 
 </style>
 
 <body class="sub-menu">
@@ -89,7 +145,7 @@
     
         <div class="definition">
             <p>DEFINITION</p>
-            <li> Ang EXPLICATING pagpapaliwanag ng impormasyon na implicit o hindi hayag sa orihinal na teksto upang ito ay maging malinaw sa target na wika</li>
+            <li> Ang EXPLICATING ay ang pagpapaliwanag ng impormasyon na implicit o hindi hayag sa orihinal na teksto upang ito ay maging malinaw sa target na wika</li>
         
             <p>PURPOSE</p>
             <li>Ginagamit ang explicating upang gawing mas malinaw ang mga nakatagong impormasyon sa orihinal na teksto, ipaliwanag ang mga sangguniang kultural, idiomatic expressions, o teknikal na detalye, at siguruhing naipapahayag nang maayos ang diwa ng orihinal na teksto sa target na wika.</li>
