--- a/matuto/matutoHome.html
+++ b/matuto/matutoHome.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="../global.css">
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="../../style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Jersey+10&family=Josefin+Slab:wght@400;600&display=swap" rel="stylesheet">
@@ -20,7 +20,7 @@
 
 
 <body class="sub-menu" id="matuto-home">
-    <a class="home-button" href="../index.html"><img src="../asset/img/HOME ICON.png" alt=""></a>
+    <a class="home-button" href="../../index.html"><img src="../asset/img/HOME ICON.png" alt=""></a>
 
     <div id="white-background">
         <img id="matuto-juan" src="../asset/img/JUAN-MATUTO.png" alt="">
@@ -28,15 +28,13 @@
         <div id="greetings">
             <p>MABUHAY! AKO SI JUAN!</p>
             <p>AT ITO ANG MUNDO NG MGA LETRA!</p>
-            <p>upang magpatuloy sa ating paglalakbay sa mahikal na mundong ito,</p>
-            <p>nararapat lamang na mayroon tayong sapat na kaalaman sa pagsasalin ng wika</p>
+            <p>Upang magpatuloy sa ating paglalakbay sa mahikal na mundong ito,nararapat lamang na mayroon tayong sapat na kaalaman sa pagsasalin ng wika</p>
         </div>
 
         <div id="technique-menus">
             <div>
-                <p>Mayroon tayong limang teknik sa pagsasalin na dapat nating matutunan. 
-                <p>Ito ang Borrowing, Explicating, Modulation, Equivalence, at Adaptation.</p> 
-                <p>Pinduting lamang ang mga button upang matutunan ang mga teknik na ito: </p>
+                <p>Mayroon tayong limang teknik sa pagsasalin na dapat nating matutunan. Ito ang Borrowing, Explicating, Modulation, Equivalence, at Adaptation.</p> 
+                <p>Pindutin lamang ang mga button upang matutunan ang mga teknik na ito: </p>
             </div>
             
             <div>
