--- a/matuto/matutoHome.html
+++ b/matuto/matutoHome.html
@@ -20,7 +20,7 @@
 
 
 <body class="sub-menu" id="matuto-home">
-    <a class="home-button" href="../../index.html"><img src="../asset/img/HOME ICON.png" alt=""></a>
+    <a class="home-button" href="../index.html"><img src="../asset/img/HOME ICON.png" alt=""></a>
 
     <div id="white-background">
         <img id="matuto-juan" src="../asset/img/JUAN-MATUTO.png" alt="">
